tests/language_tests/pass/0056_nested_if_else.ee
fn main() {
    if (true) {
        if (false) {
            print(1);
        } else {
            print(2);
        }
    } else {
        print(3);
    }
}
