tests/language_tests/fail/0031_unknown_variable_in_taken_else_branch.ee
fn main() {
    if (false) {
        print(1);
    } else {
        print(missing);
    }
}
